fixed client list's text align

--- a/coach-me/src/components/coach/coachDashboard/clientsList/ClientInfo/clientInfo.scss
+++ b/coach-me/src/components/coach/coachDashboard/clientsList/ClientInfo/clientInfo.scss
@@ -58,6 +58,7 @@
             font-family: DM Sans;
             font-weight: 600;
             padding: 0.7rem 1.1rem;
+            text-align: center;
             margin: 0 1rem;
         }
         .details {
@@ -197,7 +198,7 @@
 
 .client-card {
     display: flex;
-
+    justify-content: center;
     align-items: center;
     border: 2px solid #c4cfdd;
     width: 100%;
@@ -205,8 +206,7 @@
     background-color: #edf2f8;
     .name-container {
         font-family: 'DM Sans';
-        font-size: 1.6rem;
-        text-align: center;
+        font-size: 2rem;
         color: #274160;
     }
 }
